--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/holo_green_dark"
-        android:text="PAGE 2"
+        android:background="@android:color/holo_red_dark"
+        tools:text="PAGE 1"
         android:gravity="center"
-        android:textSize="64sp">
-
-</TextView>
+        android:textSize="64sp"/>
